--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <script src="http://cdn.jsdelivr.net/handlebarsjs/2.0.0/handlebars.min.js"></script>
         <script src="http://google.com/jsapi"></script>
         <script src="js/lib/jquery-3.1.1.js"></script>
-        <script src="js/lib/jasmine-jquery.js"></script>
+        <script src="jasmine/lib/jasmine-2.1.2/jasmine-jquery.js"></script>
         <script src="js/app.js"></script>
 
 
